--- a/E-Commerce.Web/E-Commerce.Web.csproj
+++ b/E-Commerce.Web/E-Commerce.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\E-Commerce.Presentation\E-Commerce.Presentation.csproj" />
+    <ProjectReference Include="..\E-Commerce.Presistence\E-Commerce.Presistence.csproj" />
   </ItemGroup>
 
 </Project>
