Create Product Module

--- a/E-Commerce.Web/appsettings.Development.json
+++ b/E-Commerce.Web/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;"
   }
 }
