--- a/E-Commerce.Presentation/E-Commerce.Presentation.csproj
+++ b/E-Commerce.Presentation/E-Commerce.Presentation.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\E-Commerce.ServicesAbstraction\E-Commerce.ServicesAbstraction.csproj" />
   </ItemGroup>
 
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"></FrameworkReference>
+		</ItemGroup>
 </Project>
