--- a/E-Commerce.Web/appsettings.Development.json
+++ b/E-Commerce.Web/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "Default": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;"
+  },
+  "URLs": {
+    "BaseUrl": "https://localhost:7047"
   }
 }
