Base of Basket Module - use Redis

--- a/E-Commerce.Web/appsettings.Development.json
+++ b/E-Commerce.Web/appsettings.Development.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;"
+    "DefaultConnection": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;",
+    "RedisConnection": "localhost"
+
   },
   "URLs": {
     "BaseUrl": "https://localhost:7047"
