--- a/E-Commerce.Web/appsettings.Development.json
+++ b/E-Commerce.Web/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;",
+    "IdentityConnection": "server=.; database=E-CommerceDb.Identity; Trusted_Connection=true; TrustServerCertificate=true;",
     "RedisConnection": "localhost"
 
   },
