Edit on Seeding Data To make it work on any Environment

--- a/E-Commerce.Web/E-Commerce.Web.csproj
+++ b/E-Commerce.Web/E-Commerce.Web.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\E-Commerce.Presistence\E-Commerce.Presistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
