--- a/Admin.Dashboard/appsettings.Development.json
+++ b/Admin.Dashboard/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=.; database=E-CommerceDb; Trusted_Connection=true; TrustServerCertificate=true;",
-    "IdentityConnection": "server=.; database=E-CommerceDb.Identity; Trusted_Connection=true; TrustServerCertificate=true;",
+    "IdentityConnection": "server=.; database=E-CommerceDb.Identity; Trusted_Connection=true; TrustServerCertificate=true;MultipleActiveResultSets=true",
     "RedisConnection": "localhost"
 
   },
