--- a/E-Commerce.Presistence/E-Commerce.Presistence.csproj
+++ b/E-Commerce.Presistence/E-Commerce.Presistence.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\E-Commerce.Services\E-Commerce.Services.csproj" />
+    <ProjectReference Include="..\E-Commerce.Shared\E-Commerce.Shared.csproj" />
   </ItemGroup>
 
 </Project>
